first blockout landing join mobile

--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,15 +1,28 @@
-<div class="landing-join max-w-2k mx-auto flex justify-center relative w-full background-test">
+<!--<div class="landing-join max-w-2k mx-auto flex justify-center relative w-full background-test">-->
 
-<!--  <img class="background-video absolute max-w-2k w-full object-cover z-0" src="assets/images/corsairAlFilo.png" alt="Landing Join">-->
+<!--&lt;!&ndash;  <img class="background-video absolute max-w-2k w-full object-cover z-0" src="assets/images/corsairAlFilo.png" alt="Landing Join">&ndash;&gt;-->
 
-  <div class="h-full flex flex-col justify-end">
-    <div class="join-card-wrap flex justify-end pb-32">
-      <app-join-card></app-join-card>
-    </div>
-    <div class="basic-card-wrap self-end flex justify-stretch gap-10 pb-10">
-      <app-basic-card class="flex justify-stretch parallelogram delay-200" srcImage="info_alfilo.png" title="AL FILO" body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
-      <app-basic-card class="flex justify-stretch parallelogram delay-400" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-      <app-basic-card class="flex justify-stretch parallelogram delay-600" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
+<!--  <div class="h-full flex flex-col justify-end">-->
+<!--    <div class="join-card-wrap flex justify-end pb-32">-->
+<!--      <app-join-card></app-join-card>-->
+<!--    </div>-->
+<!--    <div class="basic-card-wrap self-end flex justify-stretch gap-10 pb-10">-->
+<!--      <app-basic-card class="flex justify-stretch parallelogram delay-200" srcImage="info_alfilo.png" title="AL FILO" body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>-->
+<!--      <app-basic-card class="flex justify-stretch parallelogram delay-400" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>-->
+<!--      <app-basic-card class="flex justify-stretch parallelogram delay-600" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="bg-secondary w-full flex flex-col items-center gap-80 ">
+  <img src="/assets/images/logo.svg" alt="Logo" class="w-40 pt-20"/>
+  <div class="flex flex-col items-center gap-10">
+    <p class="font-capital-daren" >LA AVENTURA TE ESPERA</p>
+    <button class="btn">ÚNETE A ALFILO</button>
+    <div class="flex flex-wrap gap-10 justify-center">
+            <app-basic-card class="flex justify-stretch parallelogram delay-200" srcImage="info_alfilo.png" title="AL FILO" body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
+            <app-basic-card class="flex justify-stretch parallelogram delay-400" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
+            <app-basic-card class="flex justify-stretch parallelogram delay-600" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
 </div>
