add font italic

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,6 @@
 .font-capital-daren {
   font-family: "Capital Daren", sans-serif;
 }
+.font-capital-daren-italic {
+  font-family: "Capital Daren Italic", sans-serif;
+}
