new structure design with mobile first

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,7 +1,7 @@
-<div class="  card h-64 border w-[32rem] bg-black shadow-xl ">
+<div class="card border bg-black shadow-xl ">
   <div class="flex h-full">
-    <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-5/12 object-cover" />
-    <div class="card-body">
+    <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover" />
+    <div class="card-body w-8/12">
       <h2 class="card-title text-white">{{title}}</h2>
       <p class="text-white">{{body}}</p>
     </div>
