--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,4 +1,4 @@
-<div class="landing-activities max-w-2k mx-auto flex w-full relative justify-center">
+<!-- <div class="landing-activities max-w-2k mx-auto flex w-full relative justify-center">
   <video #myVideo class="background-video absolute max-w-2k w-full object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div class="flex flex-col w-full">
     <div class="basis-8/12 flex flex-col basis items-center gap-2">
@@ -26,6 +26,35 @@
           <app-basic-card *ngIf="currentActivitiy.name === activity.name" srcImage={{activity.imageCardSrc}} title={{activity.title}} body={{activity.bodyCardSrc}}></app-basic-card>
         </ng-template>
       </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="landing-activities flex flex-col gap-40 py-10">
+  <video #myVideo class="absolute sm:w-auto sm:h-[70%] lg:h-auto lg:w-full top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
+  <div>
+    <p class="font-capital-daren text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
+    <p class="font-capital-daren text-[9rem] leading-[11rem] text-center">actividades</p>
+    <div class="flex justify-around">
+      <button class="btn text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">únete al filo</button>
+      <button class="btn bg-base-300 text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
+    </div>
+  </div>
+  <div>
+    <div class="activities-wrapper flex justify-between py-3 px-10 gap-5 backdrop-blur-md">
+      <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
+        <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-[#8cb9ca]">
+          <app-svg-icon class="svg-activity" [path]="'assets/images/activity/' + activity.name + '.svg'"></app-svg-icon>
+          <div class="title-activity font-bold text-lg uppercase">{{activity.title}}</div>
+          <app-svg-icon *ngIf="currentActivitiy.name !== activity.name" class="svg-circle" [path]="'assets/images/circle.svg'"></app-svg-icon>
+          <app-svg-icon *ngIf="currentActivitiy.name === activity.name" class="svg-circle" [path]="'assets/images/circle-hoop.svg'"></app-svg-icon>
+        </div>
+      </ng-template>
+    </div>
+    <div class="p-10">
+      <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
+        <app-basic-card *ngIf="currentActivitiy.name === activity.name" srcImage={{activity.imageCardSrc}} title={{activity.title}} body={{activity.bodyCardSrc}}></app-basic-card>
+      </ng-template>
     </div>
   </div>
 </div>
