--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -43,17 +43,17 @@
   <div>
     <div class="activities-wrapper flex justify-between py-3 px-10 gap-5 backdrop-blur-md">
       <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
-        <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-[#8cb9ca]">
+        <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-base-300">
           <app-svg-icon class="svg-activity" [path]="'assets/images/activity/' + activity.name + '.svg'"></app-svg-icon>
           <div class="title-activity font-bold text-lg uppercase">{{activity.title}}</div>
-          <app-svg-icon *ngIf="currentActivitiy.name !== activity.name" class="svg-circle" [path]="'assets/images/circle.svg'"></app-svg-icon>
-          <app-svg-icon *ngIf="currentActivitiy.name === activity.name" class="svg-circle" [path]="'assets/images/circle-hoop.svg'"></app-svg-icon>
+          <app-svg-icon [hidden]="isCurrentActivity(activity.name)" class="svg-circle" [path]="'assets/images/circle.svg'"></app-svg-icon>
+          <app-svg-icon [hidden]="!isCurrentActivity(activity.name)" class="svg-circle" [path]="'assets/images/circle-hoop.svg'"></app-svg-icon>
         </div>
       </ng-template>
     </div>
     <div class="p-10">
       <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
-        <app-basic-card *ngIf="currentActivitiy.name === activity.name" srcImage={{activity.imageCardSrc}} title={{activity.title}} body={{activity.bodyCardSrc}}></app-basic-card>
+        <app-basic-card [hidden]="!isCurrentActivity(activity.name)" srcImage={{activity.imageCardSrc}} title={{activity.title}} body={{activity.bodyCardSrc}}></app-basic-card>
       </ng-template>
     </div>
   </div>
