--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,4 +1,4 @@
-<div class="landing-activities flex flex-col gap-40 py-10">
+<div class="landing-activities flex flex-col gap-40 pt-10">
   <video #myVideo class="absolute sm:w-auto m-auto h-[70%] lg:w-full lg:max-h-[70%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div>
     <p class="font-capital-daren text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
