hotfix video landing activities position

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,5 +1,5 @@
 <div class="landing-activities relative flex flex-col gap-40 pt-10">
-  <video #myVideo class="absolute sm:w-auto m-auto h-[70%] lg:w-full lg:max-h-[70%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
+  <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div>
     <p class="font-capital-daren text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
     <p class="font-capital-daren text-[9rem] leading-[11rem] text-center">actividades</p>
