--- a/src/app/components/landing-join/landing-join.component.css
+++ b/src/app/components/landing-join/landing-join.component.css
@@ -44,8 +44,40 @@
   background-size: cover;
 }
 
-.subtitle,
-.title {
-  font-family: 'Capital Daren Italic';
+.discord-anim{
+  transition: width 0.5s ;
 }
+
+.discord-anim:hover{
+  width: 12rem;
+}
+
+.svg-move {
+  transition: transform 0.5s;
+}
+
+.discord-anim:hover .svg-move {
+  transform: translateX(-3.5rem) rotate(-360deg); /* Mueve y rota el elemento */
+}
+
+.text-anim {
+  transform: translateX(-5rem);
+  opacity: 0;
+  transition: transform 0.5s , opacity 0.2s ;
+}
+
+.discord-anim:hover .text-anim {
+  transform: translateX(1.5rem);
+  opacity: 1;
+  transition: transform 0.5s , opacity 1.5s ;
+}
+
+.discord-svg {
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: white;
+}
+
+
+
 
