--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -14,15 +14,34 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="bg-secondary w-full flex flex-col items-center gap-80 ">
+*
+
+<div class="bg-[url('assets/images/corsairAlFilo.png')] bg-cover bg-center bg-no-repeat w-full flex flex-col items-center gap-80 ">
   <img src="/assets/images/logo.svg" alt="Logo" class="w-40 pt-20"/>
   <div class="flex flex-col items-center gap-10">
-    <p class="font-capital-daren" >LA AVENTURA TE ESPERA</p>
-    <button class="btn">ÚNETE A ALFILO</button>
+    <p class="font-capital-daren text-6xl md:text-7xl lg:text-8xl xl:text-9xl">LA AVENTURA TE ESPERA</p>
+    <a href="https://discord.com/invite/ADgezdG" target="_blank"
+       class="btn text-black ring-2 ring-white rounded-2xl font-black lg:hidden">Únete
+      a AlFilo</a>
+    <div class="hidden lg:block">
+      <a href="https://discord.com/invite/ADgezdG" target="_blank"
+         class="btn w-20 discord-anim rounded-full hover:bg-black bg-black border-0 border-white ">
+        <app-svg-icon class="discord-svg w-10 h-10 svg-move absolute z-10"
+                      path="assets/images/discord.svg"></app-svg-icon>
+        <p class="absolute text-anim z-0">Únete a AlFilo</p>
+      </a>
+    </div>
     <div class="flex flex-wrap gap-10 justify-center">
-            <app-basic-card class="flex justify-stretch parallelogram delay-200" srcImage="info_alfilo.png" title="AL FILO" body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
-            <app-basic-card class="flex justify-stretch parallelogram delay-400" srcImage="info_style.png" title="Estilo de juego" body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-            <app-basic-card class="flex justify-stretch parallelogram delay-600" srcImage="info_join.png" title="Hazte DAGA" body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
+      <app-basic-card class="flex justify-stretch " srcImage="info_alfilo.png" title="AL FILO"
+                      body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
+      <app-basic-card class="flex justify-stretch  -400" srcImage="info_style.png"
+                      title="Estilo de juego"
+                      body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
+      <app-basic-card class="flex justify-stretch  " srcImage="info_join.png" title="Hazte DAGA"
+                      body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
 </div>
+
+
+
