hotfix font family on titles landing activities

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,8 +1,8 @@
 <div class="landing-activities relative flex flex-col gap-40 pt-10">
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div>
-    <p class="font-capital-daren text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
-    <p class="font-capital-daren text-[9rem] leading-[11rem] text-center">actividades</p>
+    <p class="font-capital-daren-italic text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
+    <p class="font-capital-daren-italic text-[9rem] leading-[11rem] text-center">actividades</p>
     <div class="flex justify-center gap-16">
       <button class="btn text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">únete al filo</button>
       <button class="btn bg-base-300 text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
