--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -7,4 +7,5 @@
 <!--  <app-footer class="footer-test"></app-footer>-->
 <!--</div>-->
 
- <app-landing-join></app-landing-join>
+<app-landing-join></app-landing-join>
+<app-landing-activities></app-landing-activities>
