--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,9 +1,9 @@
-<div class="card border bg-black shadow-xl ">
+<div class="card border w-full bg-black shadow-xl">
   <div class="flex h-full">
     <img src="/assets/images/{{srcImage}}" alt="Logo" class="rounded-l-2xl w-4/12 object-cover" />
     <div class="card-body w-8/12">
-      <h2 class="card-title text-white">{{title}}</h2>
-      <p class="text-white">{{body}}</p>
+      <h2 class="card-title text-white text-2xl lg:text-3xl ">{{title}}</h2>
+      <p class="text-white text-lg lg:text-xl ">{{body}}</p>
     </div>
   </div>
 </div>
