--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,4 +1,4 @@
-<div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex flex-col">
+<!-- <div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover max-w-2k mx-auto flex flex-col">
   <div class="basis-[20%] w-[50%] border-r-2 flex justify-center">
     <div class="title text-[6rem] ">CRONOLOGÍA</div>
   </div>
@@ -16,5 +16,15 @@
   </div>
   <div class="basis-[10%]">
     <div class="h-[50%] w-[50%] border-b-2 border-r-2 rounded-br-2xl"></div>
+  </div>
+</div> -->
+
+<div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover pb-20">
+  <div></div>
+  <div class="text-[9rem] text-center font-capital-daren-italic">cronología</div>
+  <div #carousel class="event-list">
+    <ng-template ngFor let-event [ngForOf]="events" let-i="index">
+      <app-basic-card class="carousel-cell w-[50rem] mr-10" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
+    </ng-template>
   </div>
 </div>
