--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -9,3 +9,4 @@
 
 <app-landing-join></app-landing-join>
 <app-landing-activities></app-landing-activities>
+<app-landing-chronology></app-landing-chronology>
