--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -1,18 +1,20 @@
 .landing-chronology {
-  .event-list {
-    /* -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    &::-webkit-scrollbar {
-      display: none;
-    } */
-
-    /* & app-chronology-card:nth-child(odd) {
-      grid-column-start: 2;
-    } */
-
+  .event-list-carousel {
     .flickity-viewport {
       height: 15rem;
     }
   }
+  .event-list-lg {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* & app-chronology-card:nth-child(odd) {
+      grid-column-start: 2;
+    }*/
+  }
+
 }
