--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -7,8 +7,6 @@
 
     </div>
     <div class="event-list h-[70vh] w-[80%] grid grid-cols-2 gap-y-20 overflow-x-hidden relative">
-
-
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
         <app-chronology-card [style.grid-row-start]="i+1" [style.grid-row-end]="i+3" class="self-end" position={{event.position}} srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-chronology-card>
       </ng-template>
@@ -19,12 +17,21 @@
   </div>
 </div> -->
 
-<div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')] bg-cover pb-20">
-  <div></div>
-  <div class="text-[9rem] text-center font-capital-daren-italic">cronología</div>
-    <div #carousel class="event-list">
+<div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')]
+bg-cover sm:pb-20 relative flex flex-col">
+  <div class="absolute h-[95%] top-0 left-0 border-b-2 border-b-2 border-r-2 rounded-br-2xl sm:w-0
+  lg:w-[50%] lg:min-w-[754px]"></div>
+  <div class="text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px]">cronología</div>
+    <div #carousel class="event-list-carousel lg:hidden">
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
         <app-basic-card class="carousel-cell w-[35rem] mr-10" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
+      </ng-template>
+    </div>
+    <div class="event-list-lg  h-[40rem] gap-x-10 gap-y-20 overflow-x-hidden grid-cols-2
+    sm:hidden sm:self-center lg:flex lg:flex-col lg:self-start lg:h-[51rem] xl:self-center
+    lg:w-[754px] lg:px-10 xl:w-[80%] xl:grid xl:min-w-[754px] xl:max-w-[90rem]">
+      <ng-template ngFor let-event [ngForOf]="events" let-i="index">
+        <app-basic-card [style.grid-row-start]="i+1" [style.grid-row-end]="i+3" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
       </ng-template>
     </div>
 </div>
