--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -27,11 +27,13 @@ bg-cover sm:pb-20 relative flex flex-col">
         <app-basic-card class="carousel-cell w-[35rem] mr-10" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
       </ng-template>
     </div>
-    <div class="event-list-lg  h-[40rem] gap-x-10 gap-y-20 overflow-x-hidden grid-cols-2
-    sm:hidden sm:self-center lg:flex lg:flex-col lg:self-start lg:h-[51rem] xl:self-center
-    lg:w-[754px] lg:px-10 xl:w-[80%] xl:grid xl:min-w-[754px] xl:max-w-[90rem]">
+    <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 overflow-x-hidden grid-cols-2
+    hidden sm:self-center md:w-full lg:flex lg:flex-col lg:self-start lg:h-[51rem] xl:self-center
+    lg:px-10 xl:w-[80%] xl:grid xl:min-w-[754px] xl:max-w-[90rem]">
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
-        <app-basic-card [style.grid-row-start]="i+1" [style.grid-row-end]="i+3" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
+        <app-basic-card class="event-card flex items-center lg:max-w-[43.4rem]
+        sm:before:content-none xl:before:content-[''] before:w-[1rem] before:h-[1rem] before:rounded-full before:bg-white before:-ml-[1.8rem] before:mr-[1.8rem]
+        sm:after:content-none md:after:content-[''] after:w-[1rem] after:h-[1rem] after:rounded-full after:bg-white after:-mr-[1.68rem] after:ml-[1.68rem]" [ngClass]="{'xl:before:content-none' : (i+1) % 2 !== 0, 'xl:after:content-none' : (i+1) % 2 === 0}"[style.grid-row-start]="i+1" [style.grid-row-end]="i+3" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
       </ng-template>
     </div>
 </div>
