--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,18 +1,18 @@
-<div class="landing-activities relative flex flex-col gap-40 pt-10">
+<div class="landing-activities relative flex flex-col gap-40 pt-20">
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div>
     <p class="font-capital-daren-italic text-[3.5rem] leading-[2rem] text-center">participa en diferentes</p>
     <p class="font-capital-daren-italic text-[9rem] leading-[11rem] text-center">actividades</p>
     <div class="flex justify-center gap-16">
       <button class="btn text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">únete al filo</button>
-      <button class="btn bg-base-300 text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
+      <button class="btn bg-alfilo-blue text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
     </div>
   </div>
   <div class="activities-container flex lg:w-screen">
     <div class="flex flex-col min-w-[754px] md:w-screen lg:items-end lg:basis-6/12 lg:rounded-tr-2xl lg:border-t-2 lg:border-r-2 lg:mt-[8.7rem]">
       <div class="activities-wrapper flex justify-between py-3 px-10 gap-5 lg:max-w-[47rem] lg:-mt-[8.7rem]">
         <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
-          <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-base-300">
+          <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-alfilo-blue">
             <app-svg-icon class="svg-activity" [path]="'assets/images/activity/' + activity.name + '.svg'"></app-svg-icon>
             <div class="title-activity font-bold text-lg uppercase">{{activity.title}}</div>
             <app-svg-icon [hidden]="isCurrentActivity(activity.name)" class="svg-circle" [path]="'assets/images/circle.svg'"></app-svg-icon>
