--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,4 +1,4 @@
-<div class="w-[80rem] card border-2 bg-secondary p-10">
+<div class="card border-2 bg-secondary p-10">
   <div class="flex flex-col gap-4 gap-y-10">
     <div class="flex gap-5 ">
       <div class="flex flex-col items-center gap-4 w-1/3  ">
