--- a/src/app/components/landing-contact-us/landing-contact-us.component.html
+++ b/src/app/components/landing-contact-us/landing-contact-us.component.html
@@ -44,7 +44,7 @@
   </div>
 </div> -->
 
-<div class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover py-20">
+<div class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover bg-center py-20">
   <div class="flex flex-col justify-center gap-10">
     <div>
       <p class="font-capital-daren-italic text-[3.5rem] leading-[2rem] text-center">contacta con</p>
