--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -8,8 +8,8 @@
 <!--</div>-->
 
 <app-landing-join></app-landing-join>
-<!-- <app-landing-activities></app-landing-activities> -->
-<!-- <app-landing-chronology></app-landing-chronology> -->
+<app-landing-activities></app-landing-activities>
+<app-landing-chronology></app-landing-chronology>
 <app-landing-creators></app-landing-creators>
 <app-landing-contact-us></app-landing-contact-us>
 <app-footer class="footer-test"></app-footer>
