--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -2,20 +2,16 @@
   .activities-container {
     background: linear-gradient(transparent, 15%, black);
 
-    @media (min-width: 1024px) {
-      background: none;
+    .md\:bg-line-bottom {
+      @media (min-width: 768px) and (max-width: 1024px) {
+        background-image: linear-gradient(180deg,
+        transparent calc(83% - 1px),
+        white calc(83%),
+        transparent calc(83% + 1px));
+      }
     }
 
     .activities-wrapper {
-      background: linear-gradient(180deg,
-      transparent calc(83% - 1px),
-      white calc(83%),
-      transparent calc(83% + 1px));
-
-      @media (min-width: 1024px) {
-        background: none;
-      }
-
       .activity {
         .svg-activity,
         .svg-circle {
@@ -23,8 +19,8 @@
         }
 
         .svg-activity {
-          width: 5rem;
-          height: 5rem;
+          width: 10vw;
+          height: 10vw;
         }
 
         .svg-circle {
