--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -2,7 +2,7 @@
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline src="assets/videos/video.mp4"></video>
   <img src="/assets/images/logo.svg" alt="Logo" class="w-40 pt-20"/>
   <div class="flex flex-col items-center gap-10">
-    <p class="font-capital-daren text-5xl md:text-7xl lg:text-8xl xl:text-9xl text-alfilo-dark-blue">LA AVENTURA TE ESPERA</p>
+    <p class="font-capital-daren text-5xl md:text-7xl lg:text-8xl xl:text-9xl text-center">LA AVENTURA TE ESPERA</p>
     <a href="https://discord.com/invite/ADgezdG" target="_blank"
        class="btn md:btn-lg text-black ring-2 ring-white rounded-2xl font-black lg:hidden">Únete
       a AlFilo</a>
