--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -3,7 +3,7 @@
     background: linear-gradient(transparent, 15%, black);
 
     .bg-line-bottom {
-      @media (min-width: 431px) and (max-width: 1024px) {
+      @media (min-width: 768px) and (max-width: 1024px) {
         background-image: linear-gradient(180deg,
         transparent calc(83% - 1px),
         white calc(83%),
@@ -23,8 +23,25 @@
         }
 
         .svg-activity {
-          width: 10vw;
-          height: 10vw;
+          width: 4rem;
+          height: 4rem;
+
+          @media (max-width: 375px) {
+            width: 2.5rem;
+            height: 2.5rem;
+          }
+          @media (min-width: 376px) and (max-width: 430px) {
+            width: 3rem;
+            height: 3rem;
+          }
+          @media (min-width: 431px) and (max-width: 640px) {
+            width: 3rem;
+            height: 3rem;
+          }
+          @media (min-width: 641px) and (max-width: 768px) {
+            width: 10vw;
+            height: 10vw;
+          }
         }
 
         .svg-circle {
