--- a/src/app/components/landing-contact-us/landing-contact-us.component.html
+++ b/src/app/components/landing-contact-us/landing-contact-us.component.html
@@ -1,64 +1,18 @@
-<!-- <div
-  class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover max-w-2k mx-auto flex justify-center">
-  <div class="flex flex-col w-full">
-    <div class="basis-8/12 flex flex-col basis items-center gap-2">
-      <div class="subtitle text-[3.5rem] ml-6 pt-2">contacta con</div>
-      <div class="title text-[9rem] leading-[6rem] mb-10">al filo</div>
-      <div class="backdrop-blur-sm w-[100%] max-w-[60rem] flex justify-around p-20 rounded-2xl border-2 border-white">
-
-        <div class="bg-[#262626] text-center p-10 rounded-2xl flex flex-col gap-2 border-2 border-white">
-          <div class="subtitle text-[2rem]">
-            contrata nuestros <br/>servicios
-          </div>
-          <p>- Escolta</p>
-          <p>- Rescate</p>
-          <p>- Cazarecompensas</p>
-          <p>- Inteligencia</p>
-          <p>- Suministros</p>
-          <a href="https://discord.com/invite/ADgezdG" target="_blank"
-             class="btn bg-[#7289da] border-1 border-white flex justify-center content-center mt-10">
-            <app-svg-icon class="discord-svg" path="assets/images/discord.svg"></app-svg-icon>
-            <div class="text-lg">contacta</div>
-          </a>
-        </div>
-
-        <div class="bg-[#262626] p-10 rounded-2xl flex flex-col gap-9 text-center border-2 border-white">
-          <div class="subtitle text-[2rem]">
-            nuestras <br/>redes
-          </div>
-          <a href="https://discord.com/invite/ADgezdG" target="_blank"
-             class="btn bg-[#7289da] border-1 border-white justify-center content-center">
-            <app-svg-icon class="discord-svg" path="assets/images/discord.svg"></app-svg-icon>
-            <div class="text-lg">discord</div>
-          </a>
-          <a href="https://robertsspaceindustries.com/spectrum/community/ALFILO" target="_blank"
-             class="btn bg-black border-1 border-white justify-center content-center">
-            <img src="assets/images/logo.svg" class="h-full p-1" alt="">
-            <div class="text-lg">spectrum</div>
-          </a>
-          <a href="https://robertsspaceindustries.com" target="_blank"
-             class="btn text-lg border-1 border-white text-black justify-center content-center">juega star citizen</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
 <div class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover bg-center py-20">
   <div class="flex flex-col justify-center gap-10">
     <div>
-      <p class="font-capital-daren-italic text-[3.5rem] leading-[2rem] text-center">contacta con</p>
-      <p class="font-capital-daren-italic text-[9rem] leading-[11rem] text-center">al filo</p>
+      <p class="font-capital-daren-italic text-[2.5rem] leading-[4.5rem] xxxs:text-[3rem] xxxs:leading-[5rem] md:text-[3.5rem] md:leading-[2rem] text-center">contacta con</p>
+      <p class="font-capital-daren-italic text-[6rem] leading-[4rem] xxxs:text-[7rem] xxxs:leading-[6rem] md:text-[9rem] md:leading-[11rem] text-center">al filo</p>
     </div>
-    <div class="flex justify-center flex-wrap gap-10">
-      <div class="bg-alfilo-gray text-center p-10 rounded-2xl max-w-[21rem] w-full flex flex-col gap-10 border-2 border-white">
+    <div class="flex justify-center flex-wrap gap-10 sm:gap-6">
+      <div class="bg-alfilo-gray text-center p-10 rounded-2xl w-[95%] xxs:w-[100%] max-w-[21rem] flex flex-col gap-10 border-2 border-white">
         <div>
           <p class="font-capital-daren text-[2.3rem] leading-[2.2rem]">contrata nuestros</p>
           <p class="font-capital-daren text-[2.3rem] leading-[2.2rem]">servicios</p>
         </div>
         <div>
           <ng-template ngFor let-service [ngForOf]="services">
-            <p class="text-2xl">- {{service}}</p>
+            <p class="text-[1.2rem] xxxs:text-2xl">- {{service}}</p>
           </ng-template>
         </div>
         <div>
@@ -69,7 +23,7 @@
         </div>
       </div>
 
-      <div class="bg-alfilo-gray p-10 rounded-2xl max-w-[21rem] w-full flex flex-col gap-10 text-center border-2 border-white">
+      <div class="bg-alfilo-gray p-10 rounded-2xl w-[95%] xxs:w-[100%] max-w-[21rem] flex flex-col gap-10 text-center border-2 border-white">
         <div>
           <p class="font-capital-daren text-[2.3rem] leading-[2.2rem]">nuestras</p>
           <p class="font-capital-daren text-[2.3rem] leading-[2.2rem]">redes</p>
@@ -83,11 +37,11 @@
         <div>
           <a href="https://robertsspaceindustries.com/spectrum/community/ALFILO" target="_blank" class="btn font-normal text-[2rem] bg-black border-1 border-white justify-center content-center">
             <img src="assets/images/logo.svg" class="h-full p-1" alt="">
-            <span class="font-capital-daren">spectrum</span>
+            <span class="font-capital-daren text-[1.6rem] xxxs:text-[2rem]">spectrum</span>
           </a>
         </div>
         <div>
-          <a href="https://robertsspaceindustries.com" target="_blank" class="btn font-normal text-[2rem] font-capital-daren border-1 border-white text-black justify-center content-center">juega star citizen</a>
+          <a href="https://robertsspaceindustries.com" target="_blank" class="btn font-normal text-[2rem] h-[4.5rem] xxxs:h-[3rem] xxxs:text-[1.8rem] xxs:text-[2rem] font-capital-daren border-1 border-white text-black justify-center content-center">juega star citizen</a>
         </div>
       </div>
     </div>
